[tool.poetry]
name = "bsky-post-counter"
version = "0.1.0"
description = ""
authors = ["ryosms <ryo.sms@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bsky_post_counter"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
